--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
 
     "require-dev": {
         "squizlabs/php_codesniffer": "3.*",
-        "phpunit/phpunit": "~7.0"
+        "phpunit/phpunit": "~7.0",
+        "phpmd/phpmd": "*"
     },
 
     "suggest": {
