--- a/composer.json
+++ b/composer.json
@@ -40,13 +40,8 @@
 
     "config": {
         "sort-packages": true,
-        "optimize-autoloader": true
-    },
-
-    "bin": [
-    ],
-
-    "scripts": {
+        "optimize-autoloader": true,
+        "process-timeout": 300
     },
 
     "autoload": {
@@ -66,5 +61,35 @@
             "type": "composer",
             "url": "https://asset-packagist.org"
         }
-    ]
+    ],
+
+    "bin": [
+    ],
+
+    "scripts": {
+
+        "check": [
+            "@cs-check",
+            "@tests"
+        ],
+
+        "generate-reports": [
+            "@cs-report",
+            "@phpmd-report",
+            "@tests-report-html",
+            "@tests-report-xml",
+            "@tests-report-clover"
+        ],
+
+        "cs-check": "phpcs",
+        "cs-fix":   "phpcbf",
+        "phpmd":    "phpmd src text phpmd.xml.dist",
+        "tests":    "phpunit",
+
+        "cs-report":            "phpcs --report=json --report-file=build/phpcs-report.json          || exit 0;",
+        "phpmd-report":         "phpmd src xml phpmd.xml.dist --reportfile build/phpmd-report.xml   || exit 0;",
+        "tests-report-html":    "phpunit --coverage-html build/phpunit/coverage/html                || exit 0;",
+        "tests-report-xml":     "phpunit --coverage-xml build/phpunit/coverage/xml                  || exit 0;",
+        "tests-report-clover":  "phpunit --coverage-clover build/phpunit/coverage/clover/index.xml  || exit 0;"
+    }
 }
