--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8" ?>
 <phpunit bootstrap="./tests/bootstrap.php"
          stopOnFailure="false"
          colors="true"
@@ -25,14 +25,4 @@
             <directory suffix=".php">./src/</directory>
         </whitelist>
     </filter>
-
-
-    <logging>
-        <log type="tap"     target="build/phpunit/report.tap"/>
-        <log type="junit"   target="build/phpunit/report.junit.xml"/>
-
-        <log type="coverage-html"   target="build/phpunit/coverage/html"/>
-        <log type="coverage-text"   target="build/phpunit/coverage/coverage.txt"/>
-        <log type="coverage-clover" target="build/phpunit/coverage/coverage.xml"/>
-    </logging>
 </phpunit>
