[-]: remove the `build` folder (better create from composer scripts)

--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,19 @@ composer.phar
 phpunit.phar
 /phpunit.xml
 .phpunit.result.cache
+/build
 
 
 # --------------------------------------------
 # Local PHP Code Sniffer Config.
 # --------------------------------------------
 /phpcs.xml
+
+
+# --------------------------------------------
+# Local PHPMD Config.
+# --------------------------------------------
+/phpmd.xml
 
 
 # --------------------------------------------
