--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,10 @@
 /tests              export-ignore
 /README.md          export-ignore
+/.editorconfig      export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
 /.travis.yml        export-ignore
+/.scrutinizer.yml   export-ignore
 /phpunit.xml.dist   export-ignore
 /phpcs.xml.dist     export-ignore
+/phpmd.xml.dist     export-ignore
