--- a/.gitattributes
+++ b/.gitattributes
@@ -1,9 +1,40 @@
-/tests              export-ignore
+# Autodetect text files
+* text=auto
+
+
+# ...Unless the name matches the following overriding patterns
+
+# Definitively text files
+*.php  text
+*.css  text
+*.js   text
+*.txt  text
+*.md   text
+*.xml  text
+*.json text
+*.bat  text
+*.sql  text
+*.yml  text
+
+
+# Ensure those won't be messed up with
+*.png  binary
+*.jpg  binary
+*.gif  binary
+*.ttf  binary
+
+
+# Ignore some meta files when creating an archive of this repository
 /.editorconfig      export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
+/phpunit.xml        export-ignore
+/phpcs.xml          export-ignore
+/phpmd.xml          export-ignore
 /.travis.yml        export-ignore
 /.scrutinizer.yml   export-ignore
-/phpunit.xml.dist   export-ignore
-/phpcs.xml.dist     export-ignore
-/phpmd.xml.dist     export-ignore
+
+
+# Avoid merge conflicts in CHANGELOG
+# https://about.gitlab.com/2015/02/10/gitlab-reduced-merge-conflicts-by-90-percent-with-changelog-placeholders/
+/CHANGELOG.md		merge=union
