--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,5 @@ script:
 
 after_script:
     - bash <(curl -s https://codecov.io/bash) -f "build/phpunit/coverage/clover/index.xml"
+    - wget https://scrutinizer-ci.com/ocular.phar
+    - php ocular.phar code-coverage:upload --format=php-clover build/phpunit/coverage/clover/index.xml
