--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,8 +14,8 @@
          processIsolation="false">
 
     <testsuites>
-        <testsuite name="Test Suite">
-            <directory>./tests</directory>
+        <testsuite name="unit">
+            <directory>./tests/Unit</directory>
         </testsuite>
     </testsuites>
 
