--- a/.gitattributes
+++ b/.gitattributes
@@ -26,6 +26,7 @@
 
 
 # Ignore some meta files when creating an archive of this repository
+/.github            export-ignore
 /.editorconfig      export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
